# clean-macro-docs

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml
src/: lib.rs  macro_rules.rs  replace_macro_invocs.rs  tests.rs
tests/: integration_tests.rs
