[package]
name = "clean-macro-docs"
version = "1.0.0"
authors = ["Benjy Wiener <info@BenjyWiener.com>"]
edition = "2018"
description = "Hide internal rules when documenting `macro_rules!` macros."
repository = "https://github.com/BenjyWiener/clean-macro-docs"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
if_chain = "1.0.1"
